Added config map panel